--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -116,7 +116,7 @@
                         <div class="info-grid">
                             <div>Course Name</div><div><strong>: {{ grouped[0].report.exam.course.courseName }}</strong></div>
                             <div>Course Code/Section</div><div><strong>: {{ grouped[0].report.exam.course.courseCodeSectionIntake }}</strong></div>
-                            <div>Number of Students</div><div><strong>: {{ grouped[0].report.exam.course.courseStudent }}</strong></div>
+                            <div>Number of Students</div><div><strong>: {{ grouped[0].report.exam.examTotalStudents }}</strong></div>
                             <div>Program Code</div><div><strong>: {{ grouped[0].report.exam.course.courseDepartment }}</strong></div>
                             <div>Exam Date</div><div><strong>: {{ grouped[0].report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ grouped[0].report.exam.examEndTime.strftime("%d/%b/%Y") }}</strong></div>
                             <div>Exam Day</div><div><strong>: {{ grouped[0].report.exam.examStartTime.strftime("%A") }} - {{ grouped[0].report.exam.examEndTime.strftime("%A") }}</strong></div>
