--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -100,6 +100,7 @@
             <tbody data-exam="{{ grouped[0].report.exam.examId }}" 
                 data-exam-start="{{ grouped[0].report.exam.examStartTime.isoformat() }}"
                 data-exam-end="{{ grouped[0].report.exam.examEndTime.isoformat() }}">
+                <td>{{ total_rows }}</td>
                 
                 {% for i in range(total_rows) %}
                 <tr data-exam="{{ grouped[0].report.exam.examId }}"
@@ -107,7 +108,7 @@
                     
                     {% if i == 0 %}
                     <!-- Exam ID -->
-                     
+
                     <td rowspan="{{ total_rows }}" style="text-align:center;">
                         [{{ grouped[0].report.exam.examId }}]
                     </td>
