--- a/app/templates/user/userInvigilationReport.html
+++ b/app/templates/user/userInvigilationReport.html
@@ -45,7 +45,7 @@
                     <th>Invigilation Status</th>
                 </tr>
             </thead>
-            
+
             {% for (status, start_time, exam_id), grouped in attendances|groupby("group_key") %}
             <tbody data-exam="{{ grouped[0].report.exam.examId }}">
                 {% for att in grouped %}
@@ -63,7 +63,7 @@
                         <div class="info-grid">
                             <div>Course Name</div><div><strong>: {{ grouped[0].report.exam.course.courseName }}</strong></div>
                             <div>Course Code/Section</div><div><strong>: {{ grouped[0].report.exam.course.courseCodeSectionIntake }}</strong></div>
-                            <div>Number of Students</div><div><strong>: {{ grouped[0].report.exam.course.courseStudent }}</strong></div>
+                            <div>Number of Students</div><div><strong>: {{ grouped[0].report.exam.examTotalStudents }}</strong></div>
                             <div>Program Code</div><div><strong>: {{ grouped[0].report.exam.course.courseDepartment }}</strong></div>
                             <div>Exam Date</div><div><strong>: {{ grouped[0].report.exam.examStartTime.strftime("%d/%b/%Y") }} - {{ grouped[0].report.exam.examEndTime.strftime("%d/%b/%Y") }}</strong></div>
                             <div>Exam Day</div><div><strong>: {{ grouped[0].report.exam.examStartTime.strftime("%A") }} - {{ grouped[0].report.exam.examEndTime.strftime("%A") }}</strong></div>
@@ -90,6 +90,7 @@
                             <div>Name</div><div><strong>: {{ att.invigilator.userName }}</strong></div>
                             <div>Contact</div><div><strong>: {{ att.invigilator.userContact }}</strong></div>
                             <div>Gender</div><div><strong>: {{ att.invigilator.userGender }}</strong></div>
+                            <div>Venue</div><div><strong>: {{ att.venueNumber }}</strong></div>
                         </div>
                     </td>
 
